15 March 2010 W. Michael Petullo <mike@flyn.org>

	* Set def. and min. value of track, year and disc to 0 (not 1) in
	DAAPRecord.


11 March 2010 W. Michael Petullo <mike@flyn.org>

	* Add user agent header to requests (Rhythmbox bug #610440).

	* Fix URI handling when using IPv6 IP address (Rhythmbox bug #584244).

27 February 2010 W. Michael Petullo <mike@flyn.org>

	* Change dmap_connection_get_headers so that it no longer takes a
	bytes argument and returns a SoupMessageHeaders *. This is to remain
	compatible with Rhythmbox.

12 December 2009 W. Michael Petullo <mike@flyn.org>

	* Fixed debug statement that caused segfaults of MIPS32 and
	PowerPC.

05 December 2009 W. Michael Petullo <mike@flyn.org>

	* Use our own log domain.

28 November 2009 W. Michael Petullo <mike@flyn.org>

	* Change configure script to require avahi, howl OR DNS_SD.H.

28 August 2009 W. Michael Petullo <mike@flyn.org>

	* Make dmap_record_factory_create more generic, take gpointer
	user_data instead of path.

27 August 2009 W. Michael Petullo <mike@flyn.org>

	* Fix daap_connection_new, take password_required.

	* Use typedef's for function arguments.

	* DMAPDb foreach function now takes GHFunc.

22 August 2009 W. Michael Petullo <mike@flyn.org>

	* Work on dns_sd mDNS backend.

	* Make autogen.sh work with MacPorts.

17 August 2009 W. Michael Petullo <mike@flyn.org>

	* Update tests to include dmap.h.

	* Ensure values g_free'd before set in D[AP]APRecord's
	set_properties.

	* Add dmap-mdns-publisher.h back to installed headers.

16 August 2009 W. Michael Petullo <mike@flyn.org>

	* Add finalize function for TestDAAPRecord and TestDPAPRecord.

15 August 2009 W. Michael Petullo <mike@flyn.org>

	* Documentation.

	* Add progress idle function to dmap-connection.c.

	* Install dmap-mdns-browser.h again.

14 August 2009 W. Michael Petullo <mike@flyn.org>

	* Add documentation overview.

13 August 2009 W. Michael Petullo <mike@flyn.org>
